@@ -3,35 +3,29 @@ package kz.jarkyn.backend.operation.service;
 
 
 import kz.jarkyn.backend.warehouse.model.WarehouseEntity;
-import kz.jarkyn.backend.warehouse.repository.WarehouseRepository;
 import kz.jarkyn.backend.document.core.model.DocumentEntity;
 import kz.jarkyn.backend.warehouse.model.GoodEntity;
-import kz.jarkyn.backend.operation.mapper.TurnoverMapper;
 import kz.jarkyn.backend.operation.mode.TurnoverEntity;
-import kz.jarkyn.backend.operation.mode.dto.StockResponse;
 import kz.jarkyn.backend.operation.repository.TurnoverRepository;
 import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
+import java.time.Instant;
 import java.util.*;
-import java.util.function.Function;
 import java.util.stream.Collectors;
+
+import static java.util.function.Function.identity;
+import static java.util.stream.Collectors.*;
 
 @Service
 public class TurnoverService {
     private final TurnoverRepository turnoverRepository;
-    private final TurnoverMapper turnoverMapper;
-    private final WarehouseRepository warehouseRepository;
 
     public TurnoverService(
-            TurnoverRepository turnoverRepository,
-            TurnoverMapper turnoverMapper,
-            WarehouseRepository warehouseRepository) {
+            TurnoverRepository turnoverRepository
+    ) {
         this.turnoverRepository = turnoverRepository;
-        this.turnoverMapper = turnoverMapper;
-        this.warehouseRepository = warehouseRepository;
     }
 
     @Transactional(readOnly = true)
@@ -40,42 +34,56 @@ public class TurnoverService {
     }
 
     @Transactional(readOnly = true)
-    public List<StockResponse> findStock(WarehouseEntity warehouseEntity, List<GoodEntity> list) {
-        List<WarehouseEntity> warehouses = warehouseRepository.findAll().stream()
-                .filter(warehouse -> warehouseEntity == null || warehouse.equals(warehouseEntity)).toList();
-        Map<Pair<WarehouseEntity, GoodEntity>, TurnoverEntity> map = turnoverRepository.findLastByGood(list).stream()
-                .collect(Collectors.toMap(turnover ->
-                        Pair.of(turnover.getWarehouse(), turnover.getGood()), Function.identity()));
-        return warehouses.stream().flatMap(warehouse -> list.stream().map(good -> {
-            TurnoverEntity lastTurnover = map.get(Pair.of(warehouse, good));
-            if (lastTurnover == null) {
-                return turnoverMapper.toStockResponse(warehouse, good, 0, BigDecimal.ZERO);
-            }
-            return turnoverMapper.toStockResponse(warehouse, good,
-                    lastTurnover.getRemain() + lastTurnover.getQuantity(), lastTurnover.getCostPrice());
-        })).toList();
+    public List<Pair<Pair<WarehouseEntity, GoodEntity>, Integer>> findRemindAtMoment(
+            List<Pair<WarehouseEntity, GoodEntity>> goodsPair, Instant moment
+    ) {
+        Map<Pair<WarehouseEntity, GoodEntity>, TurnoverEntity> map = goodsPair.stream()
+                .collect(groupingBy(Pair::getFirst, mapping(Pair::getSecond, Collectors.toList())))
+                .entrySet().stream()
+                .map(entry -> turnoverRepository.findLastByGoodAndMoment(entry.getKey(), entry.getValue(), moment))
+                .flatMap(Collection::stream)
+                .collect(toMap(turnover -> Pair.of(turnover.getWarehouse(), turnover.getGood()), identity(),
+                        (t1, t2) -> t1.getLastModifiedAt().isAfter(t2.getLastModifiedAt()) ? t1 : t2));
+        return goodsPair.stream().distinct().map(pair -> Pair.of(pair,
+                        Optional.ofNullable(map.get(pair))
+                                .map(turnover -> turnover.getRemain() + turnover.getQuantity())
+                                .orElse(0)))
+                .toList();
     }
 
     @Transactional
-    public void create(DocumentEntity document, GoodEntity good, Integer quantity, BigDecimal costPrice) {
+    public void create(DocumentEntity document, GoodEntity good, Integer quantity) {
         TurnoverEntity turnover = new TurnoverEntity();
         turnover.setDocument(document);
         turnover.setGood(good);
         turnover.setQuantity(quantity);
-        turnover.setCostPrice(costPrice);
         turnover.setWarehouse(document.getWarehouse());
         turnover.setMoment(document.getMoment());
-        StockResponse stock = findStock(turnover.getDocument().getWarehouse(), List.of(turnover.getGood()))
-                .stream().findFirst().orElseThrow();
-        turnover.setRemain(stock.getRemain());
-        if (quantity < 0) {
-            turnover.setCostPrice(stock.getCostPrice());
-        }
+        turnover.setRemain(0);
         turnoverRepository.save(turnover);
+        fixBalances(turnover.getWarehouse(), turnover.getGood(), turnover.getMoment());
     }
 
     @Transactional
     public void delete(DocumentEntity document) {
-        turnoverRepository.deleteAll(turnoverRepository.findByDocument(document));
+        List<TurnoverEntity> turnovers = turnoverRepository.findByDocument(document);
+        turnoverRepository.deleteAll(turnovers);
+        for (TurnoverEntity turnover : turnovers) {
+            fixBalances(turnover.getWarehouse(), turnover.getGood(), turnover.getMoment());
+        }
+    }
+
+    @Transactional
+    protected void fixBalances(WarehouseEntity warehouse, GoodEntity good, Instant moment) {
+        List<TurnoverEntity> turnovers = turnoverRepository
+                .findByWarehouseAndGoodAndMomentGreaterThanEqual(warehouse, good, moment).stream()
+                .sorted(Comparator.comparing(TurnoverEntity::getMoment)
+                        .thenComparing(turnoverEntity -> turnoverEntity.getDocument().getLastModifiedAt()))
+                .toList();
+        Integer remain = findRemindAtMoment(List.of(Pair.of(warehouse, good)), moment).getFirst().getSecond();
+        for (TurnoverEntity turnover : turnovers) {
+            turnover.setRemain(remain);
+            remain += turnover.getQuantity();
+        }
     }
 }
